--- a/Converter/Converter.HtmlToPdf/Converter.HtmlToPdf.csproj
+++ b/Converter/Converter.HtmlToPdf/Converter.HtmlToPdf.csproj
@@ -6,7 +6,9 @@
 
     <ItemGroup>
       <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+      <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.7" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
       <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.WinForms" Version="19.2.0.44" />
